# RenderEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RenderingEngine.sln  RenderingEngine.vcxproj  RenderingEngine.vcxproj.filters  cmakelists-backup.txt  gtk.c  gtk2.c  image.tga  main.c  xlib_shm.c
RenderEngine/: CMakeLists.txt  gtk.c  output.tga  xlib_stream.c
RenderEngine/config/: README.md  baymach.sh  coral.sh  mystar190sl.sh  sample.sh  spheres.sh  wall.sh  zero.sh
RenderEngine/input/cube/: cube.mtl
RenderEngine/src/: benchmark.c  engine.c  engine.h  main.c
RenderEngine/src/imageUtil/: imageUtil.c  imageUtil.h
RenderEngine/src/math/: renderMath.c  renderMath.h
RenderEngine/src/parsing/: linkedList.c  objParser.c  objParser.h  stack.c  stack.h
RenderEngine/src/renderer/: renderer.c  renderer.h
RenderEngine/src/visualizer/: visualizer.c  visualizer.h
RenderEngine/tests/: main.c  renderMathTests.c  rendererTests.c  visualizerTests.c
enc_temp_folder/581ee0fbef975bcd117ed86f151f60/: objParser.c
enc_temp_folder/c6d62692d38af2dc84109bfddd721424/: main.c
libs/math/src/primitives/: line.h  lineSegment.h  plane.h  point.h  polygon.h  ray.h  triangle.h  vector.h
src/: main.c  xlib.c  xlib_shm.c
src/math/: line.h  lineSegment.h  math.c  math.h  plane.h  point.h  polygon.h  ray.h  renderMath.c  renderMath.h  triangle.h  vector.h
src/renderer/: renderer.c  renderer.h  shader.h
src/src/: main.c
src/src/math/: renderMath.c  renderMath.h.autosave
src/src/renderer/: renderer.c  renderer.h
src/src/visualizer/: visualizer.h
src/tests/: renderMathTests.c  renderMathTests.h  rendererTests.c  rendererTests.h  testing.h  tests.c  tests.h  visualizerTests.h
src/visualizer/: visualizer.c
tests/: renderMathTests.c  renderMathTests.h  testing.c  tests.c
